Bug 1637405 - Merge PUA characters with Script=Unknown with the surrounding script run during itemization (just like Script=Common). r=jrmuizel

If the script itemizer interrupts runs on encountering Script=Unknown, the PUA character will
be shaped separately from its context and therefore OpenType features cannot take effect.
Allowing characters with Script=Unknown to be "adopted" into the surrounding run  makes glyph
shaping possible, where a font wants to apply OpenType features such as ligation, kerning,
or diacritic positioning between a PUA codepoint and the adjacent non-PUA characters.

Differential Revision: https://phabricator.services.mozilla.com/D75067